@@ -1,5 +1,13 @@
 2007-04-02  Osmo Salomaa  <otsaloma@cc.hut.fi>
 
+	* gaupol/unittest/case.py (TestCase.get_text):
+	Use util.memoize.
+
+	* gaupol/util.py (memoize):
+	Do not pickle the self argument of methods.
+
+2007-04-02  Osmo Salomaa  <otsaloma@cc.hut.fi>
+
 	* gaupol/unittest/case.py:
 	* gaupol/unittest/decorators.py:
 	* gaupol/unittest/__init__.py:
